--- a/public/index.html
+++ b/public/index.html
@@ -62,8 +62,10 @@
         }
       })(window.location);
     </script>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <!-- End Single Page Apps for GitHub Pages -->
   </head>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
